--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>MesaHacks 2018 Live</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/logo-icon.png">
+  <link rel="icon" type="image/x-icon" href="./assets/MH_icon.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
