--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root><span class="text-white">Loading...</span></app-root>
 </body>
 </html>
